--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,58 @@
-.App {
+body {
   text-align: center;
+  font-family: "Roboto";
+  background: #F9FAFB;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+li{
+  list-style: none;
+  text-align: left;
+}
+.todo-wrapper {
+  top: 50%;
+  margin-top: 200px;
+}
+.todo-input {
+  border: 1px solid #BCC2D1;
+  border-radius: 3px;
+  padding: 6px 24px;
+  height: 32px;
+  width: 360px;
+  font-size: 16px;
+  background: #FFFFFF;
+  box-shadow: 0 4px 8px 0 rgba(35,35,36,0.04), 0 1px 4px 0 rgba(73,33,173,0.06);
+  color: #343945;
+}
+.todo-input::placeholder {
+  color: #8C96AD;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todo-input:focus {
+  border-color: #8454CD;
+  outline: none;
 }
-
-.App-link {
-  color: #61dafb;
+.todo-list{
+  width:360px;
+  padding:6px;
+  margin-left:auto;
+  margin-right:auto;
 }
+.todo-item{
+  padding: 12px;
+  margin-bottom:12px;
+  border-bottom: 1px solid #8C96AD;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.todo-filter li {
+  display:inline-block;
+  padding:10px;
+  margin-right:10px;
+  border:1px solid #BCC2D1;
+  border-radius: 3px;
+  cursor: pointer;
+  color: #343945;
+}
+.todo-filter li.current{
+  opacity: 0.3;
+  cursor: not-allowed;
 }
